INIT - new function
BODY:
New function to display same shell format message

TODO:
N/A

--- a/pipex/libft/Makefile
+++ b/pipex/libft/Makefile
@@ -52,6 +52,7 @@ DPRINTF_SRCS	:=	ft_dprintf_arg.c\
 MEM_SRCS	:=	ft_free_ptrptr_str.c\
 
 MSG_SRCS	:=	ft_error.c\
+			ft_shell_msg.c\
 			ft_warning.c
 
 PUT_SRCS	:=	ft_putchar_fd.c\
