UPDT - refresh libfft content
BODY:
Refresh libft content

TODO:
N/A

--- a/pipex/libft/Makefile
+++ b/pipex/libft/Makefile
@@ -56,6 +56,7 @@ GNL_SRCS	:=	get_next_line.c\
 LIST_SRCS	:=	ft_lst_append.c\
 			ft_lst_clear.c\
 			ft_lst_delbyobj.c\
+			ft_lst_free.c\
 			ft_lst_last.c\
 			ft_lst_new.c\
 			ft_lst_size.c\
