INIT - loop_envp_str
BODY:
Init loop_envp_str to check validpath in a string instead of every envp
data. Example: loop in PATH env

Add new macro ENV_PATH_NAME = "PATH=" to search the exactly word

TODO:
N/A

modified:   Makefile
modified:   include/pipex.h
new file:   srcs/cmd/ppx_cmd_loop_envp_str.c

--- a/pipex/Makefile
+++ b/pipex/Makefile
@@ -31,8 +31,8 @@ CFLAGS		:=	-MMD -Wall -Wextra -Werror
 #CFLAGSADD	:=	-Wconversion -g3 -fsanitize=address
 #CFLAGSADD	:=	-g3 -fsanitize=address
 CFLAGSADD	:=
-#VALGRIND	:=	valgrind --leak-check=full --show-leak-kinds=all --track-fds=yes
-VALGRIND	:=	
+VALGRIND	:=	valgrind --leak-check=full --show-leak-kinds=all --track-fds=yes
+#VALGRIND	:=	
 
 IPATH		:=	include
 OPATH		:=	obj
@@ -52,6 +52,7 @@ CMD_SRCS	:=	ppx_cmd_free.c\
 			ppx_cmd_init_prop.c\
 			ppx_cmd_loop_envline.c\
 			ppx_cmd_loop_envp.c\
+			ppx_cmd_loop_envp_str.c\
 			ppx_cmd_setpath.c\
 			ppx_cmd_show.c
 
@@ -142,6 +143,12 @@ test_ls:
 
 test:
 			$(VALGRIND) ./$(NAME) $(TESTPATH)/$(TESTFILE1) "cat -e -n" "ls" $(TESTPATH)/$(TESTFILE2)
+			@echo "$(YE)$(SEP_P)$(NC)"
+			$(VALGRIND) ./$(NAME) $(TESTPATH)/$(TESTFILE1) "/usr/bin/cat" "ls" $(TESTPATH)/$(TESTFILE2)
+			@echo "$(YE)$(SEP_P)$(NC)"
+			$(VALGRIND) ./$(NAME) $(TESTPATH)/$(TESTFILE1) "/usr/bin/cat" "prout" $(TESTPATH)/$(TESTFILE2)
+			@echo "$(YE)$(SEP_P)$(NC)"
+			$(VALGRIND) ./$(NAME) $(TESTPATH)/$(TESTFILE1) "toto" "tata" $(TESTPATH)/$(TESTFILE2)
 #			< test cat | ls > test/file2
 #			$(VALGRIND) ./$(NAME) $(TESTPATH) cat ls $(TESTPATH)/$(TESTFILE2)
 #			< test ls | ls > test/file2
