UPDT - refresh libft content
BODY:
Refresh libft content

TODO:
N/A

modified:   libft/Makefile
modified:   libft/include/ft_list.h
modified:   libft/include/ft_message.h
new file:   libft/list/ft_lst_init.c

--- a/pipex/libft/Makefile
+++ b/pipex/libft/Makefile
@@ -57,6 +57,7 @@ LIST_SRCS	:=	ft_lst_append.c\
 			ft_lst_clear.c\
 			ft_lst_delbyobj.c\
 			ft_lst_free.c\
+			ft_lst_init.c\
 			ft_lst_last.c\
 			ft_lst_new.c\
 			ft_lst_size.c\
