KO - Rebuild solution with loop KO, maintenance in CLUSTER
BODY:
N/A

TODO:
N/A

modified:   Makefile
modified:   include/pipex.h
modified:   srcs/cmd/ppx_cmd_init.c
new file:   srcs/list/ppx_lst_fd.c
new file:   srcs/list/ppx_lst_fd_in_out.c
modified:   srcs/pipex.c
new file:   srcs/ppx_file_access.c
new file:   srcs/ppx_infile.c
modified:   srcs/ppx_pipex_run.c

--- a/pipex/Makefile
+++ b/pipex/Makefile
@@ -46,7 +46,7 @@ LISTPATH	:=	list
 RM		:=	rm -rf
 
 PPX_SRCS	:=	pipex.c\
-			ppx_file_permission.c\
+			ppx_file_access.c\
 			ppx_pipex_run.c
 
 CMD_SRCS	:=	ppx_cmd_free.c\
@@ -59,7 +59,9 @@ CMD_SRCS	:=	ppx_cmd_free.c\
 			ppx_cmd_setpath.c\
 			ppx_cmd_show.c
 
-LIST_SRCS	:=	ppx_lst_set.c
+LIST_SRCS	:=	ppx_lst_fd.c\
+			ppx_lst_fd_in_out.c\
+			ppx_lst_set.c
 
 SRCS		:=	$(PPX_SRCS)\
 			$(CMD_SRCS)\
