--- a/pipex/libft/Makefile
+++ b/pipex/libft/Makefile
@@ -57,11 +57,11 @@ LIST_SRCS	:=	ft_lst_append.c\
 			ft_lst_clear.c\
 			ft_lst_delbyobj.c\
 			ft_lst_free.c\
+			ft_lst_func_lst.c\
 			ft_lst_init.c\
 			ft_lst_last.c\
 			ft_lst_new.c\
-			ft_lst_size.c\
-			ft_lst_show.c
+			ft_lst_size.c
 
 MEM_SRCS	:=	ft_free_ptrptr_str.c\
 			ft_memcmp.c\
